classDiagram
    class Concept {
        +Guid Id
        +string Name
        +List~string~ Aliases
        +List~string~ BaseObjects
        +List~Variable~ Variables
        +List~Constraint~ Constraints
        +List~Equation~ Equations
        +List~ComputationRelation~ CompRels
        +List~ConceptRule~ IntRules
        +List~SameVariable~ SameVariables
        +List~ConstructRelation~ ConstructRels
    }
    class Variable {
        +string Name
        +string Type
        +int? Length
        +int? Scale
    }
    class Equation {
        +Guid Id
        +string Expression
        +List~string~ Variables
        +int Line
        +int Column
    }
    class ComputationRelation {
        +Guid Id
        +string ConceptName
        +int Flag
        +int Rank
        +int Cost
        +string ResultVar
        +List~string~ InputVars
    }
    Concept *-- Variable
    Concept *-- Equation
    Concept *-- ComputationRelation
